# somnon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/somnon/: __init__.py
src/somnon.egg-info/: PKG-INFO
