[project]
name = "somnon"
description = "Rust-like Option and Result implementation"
authors = [{ name = "Eemil Kiviahde", email = "eemil.kiviahde@coldheart.dev" }]
version = "0.1.0"
requires-python = ">=3.11"
license = { file = "LICENSE.rst" }
readme = "README.md"
urls = { "github" = "https://github.com/coldhearti/somnon" }
[tool.poetry]
name = "somnon"
version = "0.1.2"
description = "Rust-like Option and Result implementation"
license = "LICENSE.rst"
authors = ["Eemil Kiviahde <eemil.kiviahde@coldheart.dev>"]
readme = "README.md"
repository = "https://github.com/coldhearti/somnon"
homepage = "https://coldheart.dev"
documentation = "https://github.com/coldhearti/somnon#readme"
